{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 90,
  "lineage": "9cea8fc9-fc5e-44da-945a-49ea7c538c3c",
  "resources": [
    {
      "module": "module.service[\"extramile\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:subnet/subnet-0acd1e0cbea8ceb58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 246,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acd1e0cbea8ceb58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264176381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "uat-extramile-private-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          }
        }
      ]
    },
    {
      "module": "module.service[\"extramile\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:security-group/sg-04a8885fe99c57441",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8885fe99c57441",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Service port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "extramile-20240422074254540900000004",
            "name_prefix": "extramile-",
            "owner_id": "058264176381",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "extramile",
              "Project": "Example"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "extramile",
              "Project": "Example"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service[\"extramile\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3001",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Service port",
            "from_port": 80,
            "id": "sgrule-4289928265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04a8885fe99c57441",
            "security_group_rule_id": "sgr-0f247e20df032b120",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service.aws_security_group.this",
            "module.service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-225480805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04a8885fe99c57441",
            "security_group_rule_id": "sgr-068a0748200966093",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service.aws_security_group.this",
            "module.service.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}